# robotics_v1

./: .gitignore
src/robo_cleaner/robo_cleaner_controller/: package.xml  setup.cfg  setup.py
src/robo_cleaner/robo_cleaner_controller/robo_cleaner_controller/: algo.py  map_explorer.py  models.py  robo_cleaner_controller.py  service_clients.py
src/robo_cleaner/robo_cleaner_gui/include/robo_cleaner_gui/external_api/: CleanerControllerExternalBridge.h
src/robo_miner/robo_miner_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robo_miner/robo_miner_controller/include/robo_miner_controller/: RoboMinerController.h
src/robo_miner/robo_miner_controller/robo_miner_controller/: algo.py  map_explorer.py  models.py  robo_miner_controller.py  service_clients.py
src/robo_miner/robo_miner_controller/src/: robo_miner_controller.cpp
src/robo_miner/robo_miner_controller_py/: package.xml  setup.cfg  setup.py
src/robo_miner/robo_miner_controller_py/robo_miner_controller_py/: algo.py  map_explorer.py  models.py  robo_miner_controller_py.py  service_clients.py
src/robo_miner/robo_miner_gui/config/: params.yaml
src/ur_dev/ur_control_gui/config/: params.yaml
src/ur_dev/ur_controller/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/ur_dev/ur_controller/ur_controller/: banner.py  box_mind.py  constants.py  deus_ex_cubus.py  egg.py  logo.py  models.py  scene.py  service_clients.py  ur_controller.py  util.py
