<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robo_miner_controller</name>
  <version>0.0.0</version>
  <description>robo_miner_controller</description>
  <maintainer email="tisho@taxime.to">tisho</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>robo_miner_interfaces</depend>
  <depend>robo_miner_common</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
