<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_controller</name>
  <version>0.0.1</version>
  <description>Ocado Robotics Accelerator 2022 Pick and Place Task</description>
  <maintainer email="tisho@taxime.to">tisho</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>autologging</depend>

  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>urscript_interfaces</depend>
  <depend>urscript_common</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
